# Forge_Images

./: .gitignore  README.md
.claude/: settings.local.json
files/: CONTEXT.md  README.md  VSCODE_CLAUDE_PROMPT.md  step1-rust-core.md  step2-rust-cli.md  step3-python-bridge.md  step4-python-skill.md  step5-tests.md
forgeagents-forgeimages/: pyproject.toml
forgeagents-forgeimages/bridge/: __init__.py  audit.py  forgeimages_bridge.py  models.py  settings.py
forgeagents-forgeimages/skill/: __init__.py  forgeimages_skill.py
forgeagents-forgeimages/tests/: __init__.py  test_agent_boundary.py
forgeimages-core/: Cargo.toml
forgeimages-core/src/: hashing.rs  lib.rs  pipeline.rs  print.rs  templates.rs  validation.rs
forgeimages-core/templates/: pwa-icon.json
forgeimages-core/tests/: invariants.rs
