[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forgeagents-forgeimages"
version = "1.0.0"
description = "ForgeAgents integration for ForgeImages"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    { name = "Boswell Digital Solutions LLC" }
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["bridge", "skill"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
